--- a/real_time_online_user.html
+++ b/real_time_online_user.html
@@ -5,19 +5,16 @@
     <meta charset="UTF-8">
     <title>Online User</title>
     <script type="text/javascript" src="public/lib/My97DatePicker/WdatePicker.js"></script>
-    <script type="text/javascript" src="public/lib/jquery-1.8.3.min.js"></script>
+    <script type="text/javascript" src="public/lib/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="public/lib/Highstock-4.2.1/js/highstock.js"></script>
     <script type="text/javascript" src="public/lib/Highstock-4.2.1/js/modules/exporting.js"></script>
     <script type="text/javascript" src="public/lib/Highstock-4.2.1/js/modules/heatmap.js"></script>
     <script type="text/javascript" src="public/lib/DataTables-1.10.10/media/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src="public/lib/colResizable-1.5/colResizable-1.5.min.js"></script>
-    <script type="text/javascript" src="public/lib/DataTables-1.10.10/media/js/jquery.dataTables.min.js"></script>
-    <script type="text/javascript" src="public/javascript/online_user.js"></script>
+    <script type="text/javascript" src="public/javascript/content_common.js"></script>
     <link rel="stylesheet" type="text/css" href="public/lib/DataTables-1.10.10/media/css/jquery.dataTables.min.css" />
     <link rel="stylesheet" type="text/css" href="public/css/table_style.css" />
-    <link rel="stylesheet" type="text/css" href="public/lib/DataTables-1.10.10/media/css/jquery.dataTables.min.css" />
-    <link rel="stylesheet" type="text/css" href="public/css/table_style.css" />
-    <link rel="stylesheet" type="text/css" href="public/css/content.css"/>
+    <link rel="stylesheet" type="text/css" href="public/css/content.css">
 </head>
 
 <body>
@@ -50,6 +47,236 @@
             <table id="search_result_table" class="dataTable display cell-border" cellspacing="0" width="100%"></table>
         </div>
     </div>
+    <script type="text/javascript">
+        $(function () {
+            var chart1 = new Highcharts.StockChart({
+                chart: {
+                    style:{ backgroundColor: '#fafafa', borderRadius: '5px'},
+                    renderTo: 'container1',
+                    type:'spline',
+                    marginRight: 50,
+                },
+                title: {
+                    text:'在线人数统计曲线图'
+                },
+                xAxis: {
+                    type: 'datetime',
+                    title: { text:'name' },
+                },
+                yAxis: {
+                    title:{text:'在线人数'}
+                },
+                series: [{
+                    name:'总在线人数', 
+                }],
+                plotOptions: {
+                    series: {
+                        marker: {
+                            enabled: false
+                        },
+                    }
+                },
+                scrollbar: {
+                       enabled: true
+                },
+                rangeSelector: {
+                    allButtonsEnabled: true,
+                    buttons: [
+                    {
+                        count: 5,
+                        type: 'second',
+                        text: '5s'
+                    },
+                    {
+                        count: 10,
+                        type: 'second',
+                        text: '10s'
+                    }, 
+                    {
+                        count: 20,
+                        type: 'second',
+                        text: '20s'
+                    },
+                    {
+                        type: 'all',
+                        text: 'All'
+                    },
+                    ],
+                    inputEnabled: false,
+                    selected: 1,
+                },
+                credits: {enabled:false}, //右下角水印
+            });
+
+            var chart2 = new Highcharts.StockChart({
+                chart: {
+                    renderTo: 'container2',
+                    type: 'spline',
+                    animation: Highcharts.svg,
+                    marginRight: 10,
+                },
+                title: {
+                    text: '在线人数统计曲线图'
+                },
+                xAxis: {
+                    type: 'datetime',
+                    tickPixelInterval:50,
+                    title: { text:'name' }
+                },
+                yAxis: {title:{text:'在线人数'}},
+                
+                series: [
+                    {
+                        name:'斗地主普通场', 
+                        selected: true,
+                    },
+                    {
+                        name:'斗地主中级场', 
+                        selected: true,
+                    },
+                    {
+                        name:'斗地主高级场', 
+                        selected: true,
+                    }, 
+                    {
+                        name:'斗地主贵宾场', 
+                        selected: true,
+                    },
+                ],
+                legend: {
+                    enabled: true,
+                    symbolPadding: 20,
+                    // symbolWidth: 0
+                },
+                plotOptions: {
+                    series: {
+                        marker: {
+                            enabled: false, //表示是否有数据点
+                        },
+                        showCheckbox:true, //表示是否要显示复选框，该选项与series：中的selected配合使用。
+                        events :{
+                            checkboxClick: function(event) { //表示复选框的选择与取消都可以显示和隐藏所表示的数据。
+                                if(event.checked==true) {
+                                    this.show();
+                                }
+                                else {
+                                    this.hide();
+                                }
+                            },
+                        },
+                    },
+                },
+                rangeSelector: {
+                    buttons: [
+                    {
+                        count: 5,
+                        type: 'second',
+                        text: '5s'
+                    },
+                    {
+                        count: 10,
+                        type: 'second',
+                        text: '10s'
+                    }, 
+                    {
+                        count: 20,
+                        type: 'second',
+                        text: '20s'
+                    },
+                    {
+                        type: 'all',
+                        text: 'All'
+                    },
+                    ],
+                    inputEnabled: false,
+                    selected: 0,
+                },
+                credits: {enabled:false},
+            });
+            
+            chart1.reflow();
+            chart2.reflow();
+
+            setInterval(generateData, 1000);
+
+            var data = [
+                [
+                    "1",
+                    "2015-05-01 00:00",
+                    "1000",
+                ],
+                [
+                    "2",
+                    "2015-05-01 00:02",
+                    "1000",
+                ],
+                [
+                    "3",
+                    "2015-05-01 00:04",
+                    "1000",
+                ],
+            ];
+            $('#search_result_table').DataTable({
+                "data":data,
+                "columns": [
+                        { 'title': '序号' },
+                        { 'title': '时间点' },
+                        { 'title': '在线' }
+                    ],
+                "language": {
+                    "lengthMenu": "每页 _MENU_ 条记录",
+                    "zeroRecords": "没有找到记录",
+                    "info": "第 _PAGE_ 页 ( 总共 _PAGES_ 页 )",
+                    "infoEmpty": "无记录",
+                    "infoFiltered": "(从 _MAX_ 条记录过滤)"
+                },
+                "paging": false,
+                "searching": false,
+                "select": false,
+                "ordering": false,
+            });
+            $('#search_result_table').colResizable();
+        });
+        var x = [];
+        var generateData = function () {
+            console.log("Call generateData once.");
+            $.ajax({
+                type: "POST",
+                url: "/data/online_user", 
+                async: false,
+                error : function() {  
+                    console.log("Get online_user info error.");  
+                },
+                success: function (data) {
+                    var jsonData = JSON.parse(data);
+                    var time = parseInt(jsonData['time']); //获取时间
+                    var eachRoomPlayer = [];
+                    var total = parseInt(jsonData['total']); //总在线人数
+                    eachRoomPlayer.push(parseInt(jsonData['game1'])); //每个房间在线人数
+                    eachRoomPlayer.push(parseInt(jsonData['game2']));
+                    eachRoomPlayer.push(parseInt(jsonData['game3']));
+                    eachRoomPlayer.push(parseInt(jsonData['game4']));
+                    var chart_total = $('#container1').highcharts(); //总在线人数容器
+                    var chart_part = $('#container2').highcharts(); //每个房间在线人数容器
+                    chart_total.series[0].addPoint([time, total], true, false); //给总在线人数曲线图加数据
+                    if (chart_total.series[0].data.length <= 25) {
+                        x.push(time);
+                    }
+                    if (chart_total.series[0].data.length == 25) {
+                        chart_total.xAxis[0].setExtremes(x[x.length - 20], time);
+                        chart_part.xAxis[0].setExtremes(x[x.length - 20], time);
+                    }
+                    for (var seriesIndex = 0, arrayIndex = 0; seriesIndex < chart_part.series.length && arrayIndex < eachRoomPlayer.length; seriesIndex++, arrayIndex++) {
+                        chart_part.series[seriesIndex].addPoint([time, eachRoomPlayer[arrayIndex]], true, false);
+                    }
+                    if (chart_total.series[0].data.length > 100) { //当数据量超过此值时，删除多余的数据
+                        chart_total.series[0].removePoint(0);
+                        chart_part.series[0].removePoint(0);
+                    }
+                }
+            });
+        };
+    </script>
 </body>
 
 </html>
