--- a/real_time_channel.html
+++ b/real_time_channel.html
@@ -5,15 +5,16 @@
     <meta charset="UTF-8">
     <title>Charge</title>
     <script type="text/javascript" src="public/lib/My97DatePicker/WdatePicker.js"></script>
-    <script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
-    <!-- // <script type="text/javascript" src="public/lib/Highcharts-4.2.1/js/modules/exporting.js"></script> -->
-    <script type="text/javascript" src="public/lib/Highcharts-4.2.1/js/highcharts.js"></script>
-    <!-- // <script type="text/javascript" src="public/lib/Highcharts-4.2.1/js/heatmap.js"></script> -->
-    <link rel="stylesheet" type="text/css" href="public/lib/DataTables-1.10.10/media/css/jquery.dataTables.min.css" />
+    <script type="text/javascript" src="public/lib/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src="public/lib/Highstock-4.2.1/js/highstock.js"></script>
+    <script type="text/javascript" src="public/lib/Highstock-4.2.1/js/modules/exporting.js"></script>
+    <script type="text/javascript" src="public/lib/Highstock-4.2.1/js/heatmap.js"></script>
     <script type="text/javascript" src="public/lib/DataTables-1.10.10/media/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="public/lib/colResizable-1.5/colResizable-1.5.min.js"></script>
+    <script type="text/javascript" src="public/javascript/content_common.js"></script>
+    <link rel="stylesheet" type="text/css" href="public/lib/DataTables-1.10.10/media/css/jquery.dataTables.min.css" />
     <link rel="stylesheet" type="text/css" href="public/css/table_style.css" />
     <link rel="stylesheet" type="text/css" href="public/css/content.css">
-    <script src="public/javascript/channel.js"></script>
 </head>
 
 <body>
@@ -31,13 +32,11 @@
             </nav>
             <a class="refresh_button" title="刷新页面" href="javascript:void(0);" ></a>
         </div>
-        <div class="box search_box">
+        <div class="search_box">
             <div class="choosedata_wraper">
                 <div class="chooseDateType">
-                    <ul class="tabs">
-                        <li for="choosedata_easy" class="active"><span href="#">&nbsp简单</span></li>
-                        <li for="choosedata_more"><span href="#">&nbsp更多</span></li>
-                    </ul>
+                    <span for="choosedata_more" class="none">简单时间段查询</span>
+                    <span for="choosedata_easy" class="active">精确时间段查询</span>
                 </div>
                 <div class="choosedata choosedata_easy">
                     <div class="dropdown">
@@ -68,15 +67,45 @@
                     </div>
                 </div>
                 <div class="search">
-                    <input type="button" class="button button-blue" value="查询" onclick="search();" />
+                    <input type="button" class="button button-blue" value="查询" onclick="search('channel');" />
                 </div>
             </div>
         </div>
         <div class="box">
             <div class="chart_title"><span>查询结果</span></div>
-            <table id="example" class="dataTable display cell-border" cellspacing="0" width="100%"></table>
+            <table id="search_result_table" class="dataTable display cell-border" cellspacing="0" width="100%"></table>
         </div>
     </div>
+    <script type="text/javascript">
+        $(function () {
+            $('#search_result_table').DataTable({
+                data:[],
+                columns: [
+                        { 'data': 'sequence', 'title': '序号' },
+                        { 'data': 'date', 'title': '日期' },
+                        { 'data': 'usernums', 'title': '新增用户数' },
+                        { 'data': 'channel', 'title': '渠道' },
+                    ],
+                "language": {
+                    "lengthMenu": "每页 _MENU_ 条记录",
+                    "zeroRecords": "没有找到记录",
+                    "info": "第 _PAGE_ 页 ( 总共 _PAGES_ 页 )",
+                    "infoEmpty": "无记录",
+                    "infoFiltered": "(从 _MAX_ 条记录过滤)"
+                },
+                "paging": false,
+                "searching": false,
+                "select": false,
+                "ordering": false,
+            });
+            $('#search_result_table').colResizable();
+        });
+        function callbacksuccess (data) {
+            console.log(data);
+            var table = $("#search_result_table").DataTable();
+            table.clear();
+            table.rows.add(data).draw();
+        }
+    </script>
 </body>
-
 </html>
