--- a/summary_data.html
+++ b/summary_data.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <title>Summary Data</title>
     <script type="text/javascript" src="public/lib/My97DatePicker/WdatePicker.js"></script>
-    <script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
-    <!-- // <script type="text/javascript" src="public/lib/Highcharts-4.2.1/js/modules/exporting.js"></script> -->
-    <script type="text/javascript" src="public/lib/Highcharts-4.2.1/js/highcharts.js"></script>
-    <!-- // <script type="text/javascript" src="http://code.highcharts.com/3.0.7/highcharts.js"></script> -->
-    <!-- // <script type="text/javascript" src="public/lib/Highcharts-4.2.1/js/heatmap.js"></script> -->
-    <link rel="stylesheet" type="text/css" href="public/lib/DataTables-1.10.10/media/css/jquery.dataTables.min.css" />
+    <script type="text/javascript" src="public/lib/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src="public/lib/Highstock-4.2.1/js/highstock.js"></script>
+    <script type="text/javascript" src="public/lib/Highstock-4.2.1/js/modules/exporting.js"></script>
+    <script type="text/javascript" src="public/lib/Highstock-4.2.1/js/modules/heatmap.js"></script>
     <script type="text/javascript" src="public/lib/DataTables-1.10.10/media/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="public/lib/colResizable-1.5/colResizable-1.5.min.js"></script>
+    <script type="text/javascript" src="public/javascript/content_common.js"></script>
+    <link rel="stylesheet" type="text/css" href="public/lib/DataTables-1.10.10/media/css/jquery.dataTables.min.css" />
     <link rel="stylesheet" type="text/css" href="public/css/table_style.css" />
     <link rel="stylesheet" type="text/css" href="public/css/content.css">
-    <script type="text/javascript" src="public/javascript/summary_data.js"></script>
 </head>
 
 <body>
@@ -32,13 +32,11 @@
             </nav>
             <a class="refresh_button" title="刷新页面" href="javascript:void(0);" ></a>
         </div>
-        <div class="box search_box">
+        <div class="search_box">
             <div class="choosedata_wraper">
                 <div class="chooseDateType">
-                    <ul class="tabs">
-                        <li for="choosedata_easy " class="active"><span href="#">&nbsp简单</span></li>
-                        <li for="choosedata_more"><span href="#">&nbsp更多</span></li>
-                    </ul>
+                    <span for="choosedata_more" class="none">简单时间段查询</span>
+                    <span for="choosedata_easy" class="active">精确时间段查询</span>
                 </div>
                 <div class="choosedata choosedata_easy">
                     <div class="dropdown">
@@ -69,7 +67,7 @@
                     </div>
                 </div>
                 <div class="search">
-                    <input type="button" class="button button-blue" value="查询" />
+                    <input type="button" class="button button-blue" value="查询" onclick="search('summary_data');" />
                 </div>
             </div>
         </div>
@@ -82,6 +80,132 @@
             <div id="container1"></div>
         </div>
     </div>
+    <script type="text/javascript">
+    $(function () {
+        $('#search_result_table').DataTable({
+            "data":[],
+            "columns": [
+                    { 'title': '序号' },
+                    { 'title': '日期' },
+                    { 'title': '今日新增用户数' },
+                    { 'title': '新增用户占比' },
+                    { 'title': 'ccu' },
+                    { 'title': 'mcu' },
+                    { 'title': 'dau' },
+                    { 'title': 'mau' },
+                    { 'title': '今日充值人数' },
+                    { 'title': '今日充值总金额' },
+                    { 'title': 'arpu' },
+                    { 'title': 'arppu' },
+                    { 'title': '回归用户数' },
+                    { 'title': '未进行游戏的人数' },
+                    { 'title': '流失率' },
+                    { 'title': '玩游戏人数' },
+                    { 'title': '转化率' },
+                    { 'title': '开局总数' },
+                    { 'title': '平均游戏时长(局)' },
+                    { 'title': '平均游戏时长(总)' },
+                    { 'title': '最高在线' },
+                    { 'title': '玩1小时以上总用户数' },
+                ],
+            "paging": true,
+            "searching": false,
+            "select": false,
+            "scrollX": true,
+            "language": {
+                "lengthMenu": "每页 _MENU_ 条记录",
+                "zeroRecords": "没有找到记录",
+                "info": "第 _PAGE_ 页 ( 总共 _PAGES_ 页 )",
+                "infoEmpty": "无记录",
+                "infoFiltered": "(从 _MAX_ 条记录过滤)"
+            },
+        });
+        $('#search_result_table').colResizable();
+
+        var chart1 = new Highcharts.Chart({
+            chart: {
+                style:{ backgroundColor: '#fafafa', borderRadius: '5px'},
+                renderTo: 'container1',
+                type:'spline',
+                marginRight: 10,
+            },
+            title: {text:'总用户数量统计曲线图'},
+            xAxis: {
+                type: 'category', 
+                title: {text:'时间'}, 
+                tickPixelInterval: 150,
+                min: 0,
+                max: 10,
+            },
+            yAxis: {
+                title:{
+                    text:'在线人数'
+                }
+            },
+            scrollbar: {
+
+                   enabled: true
+
+            },
+            series: [
+                {
+                    name:'ccu', 
+                    selected: true,
+                },
+                {
+                    name:'dau',
+                    selected: true, 
+                },
+            ],
+            legend: {
+                enabled: true,
+                symbolPadding: 20,
+                // symbolWidth: 0
+            },
+            plotOptions: {
+                series: {
+                    marker: {
+                        enabled: false, //表示是否有数据点
+                    },
+                    showCheckbox:true, //表示是否要显示复选框，该选项与series：中的selected配合使用。
+                    events :{
+                        checkboxClick: function(event) { //表示复选框的选择与取消都可以显示和隐藏所表示的数据。
+                            if(event.checked==true) {
+                                this.show();
+                            }
+                            else {
+                                this.hide();
+                            }
+                        },
+                    },
+                },
+            },
+            credits: {enabled:false},
+        });
+        chart1.reflow();
+    })
+
+    function callbacksuccess (data) {
+        console.log(data);
+        var table = $("#search_result_table").DataTable();
+        table.clear();
+        table.rows.add(data).draw();
+        var xaxis = [];
+        var ccuChartData = [];
+        var dauChartData = [];
+        for (var index = 0; index < data.length; ++index) {
+            var dataFormat = Highcharts.dateFormat('%Y<br/>%m-%d', parseInt(data[index][1]));
+            xaxis.push(dataFormat);
+            ccuChartData.push(data[index][4]);
+            dauChartData.push(data[index][6]);
+        }
+        console.log(ccuChartData);
+        var chart_total = $('#container1').highcharts();
+        chart_total.series[0].setData(ccuChartData);
+        chart_total.series[1].setData(dauChartData);
+        chart_total.xAxis[0].setCategories(xaxis);
+    }
+    </script>
 </body>
 
 </html>
