modify date choose.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>main page</title>
+    <title>智能数据后台管理系统</title>
     <script src="http://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="public/javascript/index.js"></script>    
     <link rel="stylesheet" type="text/css" href="public/css/index.css"/>
