--- a/login.html
+++ b/login.html
@@ -5,14 +5,16 @@
     <title>login page</title>
     <link rel="stylesheet" type="text/css" href="public/css/login.css"/>
     <script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
+    <script src="//apps.bdimg.com/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
     <script type="text/javascript" src="public/javascript/login.js"></script>
 </head>
 <body>
     <form action="index.html" class="loginform">
-    <!-- <form method="post" class="loginform"> -->
         <h1>WCA 游戏管理平台</h1>
-        <input type="text" name="username" class="login-input username" placeholder="Your accout" autofocus>
-        <input type="password" name="password" class="login-input userpwd" placeholder="Password">
+        <span class="username-errormsg"></span>
+        <input type="text" name="username" class="login-input username" placeholder="Your accout"  required="required" autofocus>
+        <span class="userpwd-errormsg"></span>
+        <input type="password" name="password" class="login-input userpwd" placeholder="Password"  required="required">
         <input type="submit" value="Login" class="login-submit">
     </form>
 </body>
