modify all date choose way.

--- a/real_time_channel.html
+++ b/real_time_channel.html
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <div class="search-button">
-                <input type="button" class="button button-blue" value="查询" onclick="search('channel');" />
+                <input type="button" class="button button-blue" value="查询" onclick="search('real_time_channel');" />
             </div>
         </div>
         <div class="box">
